<resources>
    <string name="stickoworld">StickoWorld</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="facebook_app_id">818901245371317</string>
    <string name="fb_login_protocol_scheme">fb818901245371317</string>
    <string name="todo">TODO</string>
    <string name="world">World</string>
    <string name="sticko">Sticko</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="login_unsuccessful_msg">Login unsuccessful</string>
    <string name="welcome_message">It\'s currently %1$s.</string>
    <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>
    <string name="settings_btn">Settings</string>
    <string name="settings_fact_type_title">Fun Fact Type</string>

    <string name="fact_type_android">Android</string>
    <string name="fact_type_california">California</string>

    <!--Shared Preference Keys -->
    <string name="preference_fact_type_key">fact_type_pref</string>
    <string name="your_stickers">Your Stickers</string>
    <string name="about_us">About Us</string>
    <string name="great">Great</string>
    <string name="names">By Ranjith,Sohan,Aditya
                        For DSC Hackathon.</string>
    <string name="options">Options</string>
    <string name="save">Save</string>
    <string name="settings">SETTINGS</string>
    <string name="delete">Delete</string>

</resources>