<RelativeLayout android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:layout_margin="12dp"
    android:paddingTop="10dp"
    android:background="@drawable/creative_button"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/blackicon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@mipmap/icon1"
        android:contentDescription="@string/todo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:typeface="monospace"
        android:layout_below="@id/blackicon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:id="@+id/appname"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/stickoworld"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/names"
        android:textStyle="italic"
        android:layout_below="@id/appname"
        android:layout_centerHorizontal="true"
        android:typeface="monospace"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:id="@+id/compname"
        android:textColor="#000"/>


    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/great"
        android:textSize="14sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/btnRound"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/compname"
        android:layout_marginBottom="50dp"
        android:background="@drawable/creative_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>