<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".StickerGallery">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/colorAccent"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="8dp"
            app:menu="@menu/bottom_menu" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:src="@drawable/cusotmcreate"
            app:backgroundTint="@color/white"
            app:layout_anchor="@id/bottom_app_bar"
            app:maxImageSize="34dp"
            app:tint="@null" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/citytool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sticko"
                    android:textColor="@color/gyellow"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/citytoolm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/world"
                    android:textColor="#424242"
                    android:textSize="22sp" />

            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>